<resources>
    <string name="app_name">ServiceNovigrad</string>
    <string name="title_activity_register">Register</string>
    <string name="bienvenue_service_novigrad">Bienvenue à Service Novigrad</string>
    <string name="votre_email_personnel">Votre email personnel</string>
    <string name="votre_mot_de_passe">Votre mot de passe</string>
    <string name="se_connecter">Se connecter</string>
    <string name="confirmer_votre_mot_de_passe">Confirmer votre mot de passe</string>
    <string name="choisir_votre_mot_de_passe">Choisir votre mot de passe</string>
    <string name="nom">Nom</string>
    <string name="cr_er_ce_compte_comme">Créer ce compte comme</string>
    <string name="prenoms">Prénoms</string>
    <string name="creer_un_compte">Créer un compte</string>
    <string name="pas_encore_de_compte">Pas encore de compte?</string>
    <string name="se_deconnecter">Se déconnecter</string>
    <string name="bienvenue_admin">Bienvenue Admin!</string>
    <string name="textview">TextView</string>
    <string name="connect_as_Admin">Vous êtes connecté en tant que Admin</string>
    <string name="manage_services">Gérer les services</string>
    <string name="manage_accounts">Gérer les comptes</string>
    <string name="branch_function">Fonctionnement de la succursale</string>
    <string name="modify_profile">Modifier le profil</string>
    <string name="modify_services">Modifier les services offerts</string>
    <string name="modify_working_hours">Modifier les heures de travail</string>
    <string name="see_requests">Voir les demandes</string>
    <string name="click_services_to_delete">Cliquez sur le service pour supprimer</string>
    <string name="add">Ajouter</string>
    <string name="connect_as_Client">Vous êtes connecté en tant que Client</string>
    <string name="connect_as_employee">Vous êtes connecté en tant que Employé</string>
    <string name="manage_branch">Gestion de succursale</string>
    <string name="click_on_accounts_to_delete">Appuyez sur les comptes à supprimer</string>
    <string name="create">Créer</string>
    <string name="click_on_services">Appuyez sur les services pour afficher et modifier les détails</string>
    <string name="create_services">Créer une service</string>
    <string name="service_name">Nom du service</string>
    <string name="required_info">Les infomations requis</string>
    <string name="DOB">Date de naissance</string>
    <string name="address">Adresse du client</string>
    <string name="permit">Type de permis</string>
    <string name="required_doc">Les documents requis</string>
    <string name="residence_proof">Preuve de domicile</string>
    <string name="status_proof">Preuve de statut</string>
    <string name="photo">Photo du client</string>
    <string name="confirm_delete_account"><![CDATA[Êtes-vous sûr de vouloir supprimer ce compte ?]]></string>
    <string name="yes">Oui</string>
    <string name="cancel">Annuler</string>
    <string name="modify_service">Modifier le service</string>
    <string name="update">Mise à jour</string>
    <string name="delete">Supprimer</string>
    <string name="click_to_add_services">Cliquez sur le service pour l\'ajouter</string>
    <string name="create_branch">Créer un compte pour la succursale</string>
    <string name="username">Nom d\'utilisateur</string>
    <string name="phone_number">Numéro de téléphone</string>
    <string name="branch_address">Adresse de la succursale</string>
    <string name="branch_name">Nom de la succursale</string>
    <string name="confirm_delete_services">Êtes-vous sûr de vouloir supprimer ce service?</string>
    <string name="instruction_hours">Cliquez sur la case à cocher pour choisir les jours ouvrables</string>
    <string name="sunday">Dimanche</string>
    <string name="saturday">Samedi</string>
    <string name="friday">Vendredi</string>
    <string name="thursday">Jeudi</string>
    <string name="wednesday">Mercredi</string>
    <string name="tuesday">Mardi</string>
    <string name="monday">Lundi</string>
    <string name="working_hours">Les heures de travail</string>
    <string name="select_opening">Sélectionner l\'heure d\'ouverture</string>
    <string name="select_closing">Sélectionner l\'heure de fermeture</string>
    <string name="to">-</string>
    <string name="submitted_requests">Demandes soumises</string>
    <string name="new_request">Nouvelle demande</string>
    <string-array name="roles">
        <item>Employé</item>
        <item>Client</item>
    </string-array>
</resources>