<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/editTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/modify_service"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editServiceName"
        android:layout_width="213dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/service_name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.217"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTxt" />

    <CheckBox
        android:id="@+id/prenameEdit"
        android:layout_width="133dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/prenoms"
        app:layout_constraintStart_toStartOf="@+id/editRequiredInfo"
        app:layout_constraintTop_toBottomOf="@+id/editRequiredInfo" />

    <TextView
        android:id="@+id/editRequiredInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/required_info"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/editServiceName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editServiceName"
        app:layout_constraintTop_toBottomOf="@+id/editServiceName" />

    <CheckBox
        android:id="@+id/nameEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/nom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintStart_toEndOf="@+id/prenameEdit"
        app:layout_constraintTop_toBottomOf="@+id/editRequiredInfo" />

    <CheckBox
        android:id="@+id/dobEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DOB"
        app:layout_constraintEnd_toEndOf="@+id/prenameEdit"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/prenameEdit"
        app:layout_constraintTop_toBottomOf="@+id/prenameEdit" />

    <CheckBox
        android:id="@+id/addressEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        app:layout_constraintEnd_toEndOf="@+id/dobEdit"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/dobEdit"
        app:layout_constraintTop_toBottomOf="@+id/dobEdit" />

    <CheckBox
        android:id="@+id/permitEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/permit"
        app:layout_constraintEnd_toEndOf="@+id/addressEdit"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/addressEdit"
        app:layout_constraintTop_toBottomOf="@+id/addressEdit" />

    <TextView
        android:id="@+id/editRequiredDoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/required_doc"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/permitEdit"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/permitEdit"
        app:layout_constraintTop_toBottomOf="@+id/permitEdit" />

    <CheckBox
        android:id="@+id/residenceEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/residence_proof"
        app:layout_constraintEnd_toEndOf="@+id/editRequiredDoc"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editRequiredDoc"
        app:layout_constraintTop_toBottomOf="@+id/editRequiredDoc" />

    <CheckBox
        android:id="@+id/statusEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status_proof"
        app:layout_constraintEnd_toEndOf="@+id/residenceEdit"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/residenceEdit"
        app:layout_constraintTop_toBottomOf="@+id/residenceEdit" />

    <CheckBox
        android:id="@+id/photoEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/photo"
        app:layout_constraintEnd_toEndOf="@+id/statusEdit"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/statusEdit"
        app:layout_constraintTop_toBottomOf="@+id/statusEdit" />

    <Button
        android:id="@+id/update"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.147"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photoEdit"
        app:layout_constraintVertical_bias="0.13" />

    <Button
        android:id="@+id/delete"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/update"
        app:layout_constraintTop_toBottomOf="@+id/photoEdit"
        app:layout_constraintVertical_bias="0.13" />
</androidx.constraintlayout.widget.ConstraintLayout>