<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClientWelcomePage">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/roleC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect_as_Client"
        app:layout_constraintEnd_toEndOf="@+id/welcomeC"
        app:layout_constraintStart_toStartOf="@+id/welcomeC"
        app:layout_constraintTop_toBottomOf="@+id/welcomeC" />

    <TextView
        android:id="@+id/welcomeC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bienvenue_admin"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <Button
        android:id="@+id/signoutC"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/se_deconnecter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/submittedRequestsBtn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/submittedRequestsBtn"
        app:layout_constraintTop_toBottomOf="@+id/submittedRequestsBtn"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/submittedRequestsBtn"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/submitted_requests"
        app:layout_constraintEnd_toEndOf="@+id/newRequestBtn"
        app:layout_constraintStart_toStartOf="@+id/newRequestBtn"
        app:layout_constraintTop_toBottomOf="@+id/newRequestBtn" />

    <Button
        android:id="@+id/newRequestBtn"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/new_request"
        app:layout_constraintEnd_toEndOf="@+id/roleC"
        app:layout_constraintStart_toStartOf="@+id/roleC"
        app:layout_constraintTop_toBottomOf="@+id/roleC" />
</androidx.constraintlayout.widget.ConstraintLayout>