<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/createBranchA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/create_branch"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/createUserName"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/createBranchA"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/createBranchA"
        app:layout_constraintTop_toBottomOf="@+id/createBranchA" />

    <EditText
        android:id="@+id/createPassword"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/votre_mot_de_passe"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/createUserName"
        app:layout_constraintStart_toStartOf="@+id/createUserName"
        app:layout_constraintTop_toBottomOf="@+id/createUserName" />

    <EditText
        android:id="@+id/createPhone"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="@+id/createBranchName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/createBranchName"
        app:layout_constraintTop_toBottomOf="@+id/createBranchName" />

    <EditText
        android:id="@+id/createAddress"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/branch_address"
        android:inputType="textPostalAddress"
        app:layout_constraintEnd_toEndOf="@+id/createPhone"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/createPhone"
        app:layout_constraintTop_toBottomOf="@+id/createPhone" />

    <Button
        android:id="@+id/createBranchBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/create_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/createBranchA"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/createBranchA"
        app:layout_constraintTop_toBottomOf="@+id/createAddress" />

    <EditText
        android:id="@+id/createBranchName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/branch_name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/createPassword"
        app:layout_constraintStart_toStartOf="@+id/createPassword"
        app:layout_constraintTop_toBottomOf="@+id/createPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>